About to re-engineer database utilization

--- a/client/connect.html
+++ b/client/connect.html
@@ -1,5 +1,4 @@
-
-<div ng-controller='getAuthUrl' class="jumbotron"
+<div ng-controller='connectCtrl' class="jumbotron"
      style='text-align:center; font-size:61px; background-color:transparent;'>
 	<div style="text-align:left;display:inline-block;">
 		<p><a class="btn btn-lg btn-danger" style='font-size:51px;' href="{{authUrl}}">Connect to Google <span
