Refactoring, metricsData service, movement directive, metricsFilter, time periods bug fix
The monstrous `dashboardCtrl` has been defeated. It's now a tiny bunny.

A new `metricsData` service has been implemented to facilitate dealing with Google Analytics metrics.

The mechanism for calculating figure movements has been moved to an AngularJS directive. The directive has the following features:

* It watches for changes in the cell and once both figures are available, it immediately calculates the movement percentage, rather than waiting for the completion of the entire process, like before.
* In coordination with `metricsData`, it knows whether an increase or a decrease is good or bad for the metric being calculated and it reacts accordingly.

A new AngularJS filter has been implemented to deal with Google Analytics data, which is returned in raw format. In coordination with `metricsData`, this filter displays percentages with a percent sign, displays seconds in `hh:mm:ss` format, and displays quantities with commas (i.e. 2484 vs 2,484).

The specified time periods and their comparison periods were wrong. Now fixed.

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -3,7 +3,7 @@
     <table id="{{metric}}" class='og-table'>
       <thead>
       <tr>
-        <th class='metric'>{{metric}}</th>
+        <th class='metric'>{{metricPrettyNameFinder[metric]}}</th>
         <th ng-repeat="period in tableStructure.periods" class="{{period}}">{{period}}</th>
       </tr>
       </thead>
@@ -12,10 +12,12 @@
         <td>{{tableContent[id]['today'].profileInfo.profileName}}</td>
         <td ng-repeat="period in tableStructure.periods">
           <div class='results'>
-            <p class='current'>{{tableContent[id][period.toLowerCase()]['totalsForAllResults']['ga:' + metric] | number }}</p>
-            <p class='comparison'>{{tableComparisonContent[id][period.toLowerCase()]['totalsForAllResults']['ga:' + metric] | number}}</p>
+            <p class='current'>{{tableContent[id][period.toLowerCase()]['totalsForAllResults'][metric] | metricsFilter:metric }}</p>
+            <p class='comparison'>{{tableComparisonContent[id][period.toLowerCase()]['totalsForAllResults'][metric] | metricsFilter:metric }}</p>
           </div>
-          <p class='movement' ng-bind-html="movement[id][period.toLowerCase()]['totalsForAllResults']['ga:' + metric]"></p>
+          <movement current="{{tableContent[id][period.toLowerCase()]['totalsForAllResults'][metric]}}"
+                    comparison="{{tableComparisonContent[id][period.toLowerCase()]['totalsForAllResults'][metric]}}"
+                    metric="{{metric}}"></movement>
         </td>
       </tr>
       </tbody>
