--- a/source/client/userProfile/loginLink.html
+++ b/source/client/userProfile/loginLink.html
@@ -1,1 +1,1 @@
-<a href="{{authUrl}}">Sign in <span class="glyphicon glyphicon-log-in"></span></a>
+<li><a href="{{authUrl}}">Sign in <span class="glyphicon glyphicon-log-in"></span></a></li>
