--- a/source/client/signupError/signupError.html
+++ b/source/client/signupError/signupError.html
@@ -1,7 +1,18 @@
-<p>Something went wrong:</p>
-<ul>
-  <li>Perhaps Google Analytics is not enabled on your Google Account?</li>
-  <li>Maybe you don't actually have any websites registered with Google Analytics?</li>
-  <li>If it's something else, <a href="mailto:msafi@msafi.com">contact me</a> and tell me what went wrong!</li>
-  <li>Did you deny opengash access? You disappoint me, man...</li>
-</ul>
+<div class="container">
+  <h1>Something went wrong:</h1>
+  <ul class="list-group">
+    <li class="list-group-item">
+      Perhaps Google Analytics is not enabled on your Google account?
+    </li>
+    <li class="list-group-item">
+      Maybe you don't actually have any websites registered with Google Analytics?
+    </li>
+    <li class="list-group-item">
+      If it's something else, <a href="mailto:msafi@msafi.com">email me</a> and tell me what went wrong!
+    </li>
+    <li class="list-group-item">
+      Or did you do the unthinkable and deny opengash access? ಠ_ಠ ...here's the
+      <a href="{{authUrl}}">login link</a> again...
+    </li>
+  </ul>
+</div>
