--- a/source/client/welcome/welcome.html
+++ b/source/client/welcome/welcome.html
@@ -3,7 +3,7 @@
     <h1>Your Google Analytics data<br>From all your websites<br>On one screen...</h1>
     <p>...and no one will see it but you&mdash;not even us.</p>
     <p>
-      <a class="btn btn-lg btn-primary" href="{{authUrl}}">
+      <a class="btn btn-lg btn-primary" ng-click="authUrl()">
         Connect to Google Analytics <span class="glyphicon glyphicon-log-in"></span>
       </a>
     </p>
@@ -64,7 +64,7 @@
     <p>Okay, time to log in and see your Google Analytics data in a whole new way!</p>
 
     <p>
-      <a class="btn btn-lg btn-primary" href="{{authUrl}}">
+      <a class="btn btn-lg btn-primary" ng-click="authUrl()">
         Connect to Google Analytics <span class="glyphicon glyphicon-log-in"></span>
       </a>
     </p>
